v0.4.3/_sources/about.rst.txt
About us
========

History
-------

This project was started by Alykhan Tejani `@alykhantejani <https://github.com/alykhantejani>`_,
Francisco Massa `@fmassa <https://github.com/fmassa>`_ and Joost van Amersfoort `@y0ast <https://github.com/y0ast>`_
in the end of 2017 and was highly inspired by `torchnet <https://github.com/pytorch/tnt>`_.

In 2018 project core teams has grown and the first public release was published in June 2018.
Since then, several releases have appeared following a ~5 month cycle, and a thriving international community has
been leading the development.

Governance
----------
This project is purely open-source community effort. Project's affiliation to `PyTorch group <https://github.com/pytorch>`_
is due to historical reasons and it has the same implication to the project's governance as for other community projects from
`PyTorch Ecosystem <https://pytorch.org/ecosystem/>`_.

The decision making process and governance structure of the project is described in the `governance document <governance.html>`_.

Authors
-------

The following people are currently core contributors to PyTorch-Ignite’s development and maintenance:

- Victor Fomin `@vfdev-5 <https://github.com/vfdev-5>`_
- Anmol Joshi `@anmolsjoshi <https://github.com/anmolsjoshi>`_
- Sylvain Desroziers `@sdesrozis <https://github.com/sdesrozis>`_


Emeritus Core Developers
------------------------

The following people have been active contributors in the past, but are no longer active in the project:

- Alykhan Tejani `@alykhantejani <https://github.com/alykhantejani>`_
- Jason Kriss `@jasonkriss <https://github.com/jasonkriss>`_


Join Core Team
--------------

We are looking for motivated contributors to become collaborators and help out with the project.
We can start considering a candidate after several successfully merged Github pull requests.
If you are interested, for more details, please, contact Victor (@vfdev-5) on `PyTorch Slack <https://pytorch.slack.com>`_
or via email `vfdev.5` at `gmail.com`.


Citing PyTorch-Ignite
---------------------

If you use pytorch-ignite in a scientific publication, we would appreciate citations to the project.

.. code-block:: text

    @misc{pytorch-ignite,
      author = {V. Fomin and J. Anmol and S. Desroziers and J. Kriss and A. Tejani},
      title = {High-level library to help with training neural networks in PyTorch},
      year = {2020},
      publisher = {GitHub},
      journal = {GitHub repository},
      howpublished = {\url{https://github.com/pytorch/ignite}},
    }

Acknowledgements
----------------

We gratefully acknowledge the contributions of `all open-source developers <https://github.com/pytorch/ignite/graphs/contributors>`_
who helped get this project off of the ground and supported the project.

We especially appreciate amazing work of Isabela Presedo-Floyd `@isabela-pf <https://github.com/isabela-pf>`_  on project's logo,
its `elaboration <https://github.com/pytorch/ignite/issues/1221>`_ and `guidelines <https://github.com/pytorch/ignite/blob/master/assets/logo/ignite_logo_guidelines.md>`_.
Our new logos can be found `here <https://github.com/pytorch/ignite/tree/master/assets/logo>`_.

We are also grateful to Soumith Chintala `@soumith <https://github.com/soumith>`_, Joe Spisak `@jspisak <https://github.com/jspisak>`_
from Facebook for their help and to `PyTorch group <https://github.com/pytorch>`_ for infrastructure support
(GPU CI and hosting of conda releases and our documentation).

In particular, Victor Fomin `@vfdev-5 <https://github.com/vfdev-5>`_ acknowledges `Magellium <https://www.magellium.com/>`_
and `Quansight <https://www.quansight.com/>`_ for supporting project's development. Sylvain Desroziers `@sdesrozis <https://github.com/sdesrozis>`_
also gratefully acknowledges the support of `IFPEN <https://www.ifpenergiesnouvelles.fr/>`_.

We also acknowledge `scikit-learn project <https://scikit-learn.org>`_'s documentation on governance, author's presentation etc
from which this project is highly inspired.
